package Seminar3.HW;

// Принцип открытости/закрытости (Open/Closed Principle - OCP)
interface CarDiscount {
    int applyDiscount(int price);
}
