package Seminar3.HW;

// Принцип разделения интерфейса (Interface Segregation Principle - ISP)
interface CarInformation {
    String getModel();
}