package Seminar3.HW;

interface CarPricing {
    String getPriceInfo();
}